# ts_air_cargo_v2

./: .gitignore  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  cookies.txt  create_test_users.py  deploy.sh  pyproject.toml  pytest.ini  start_flower.sh
.agents/rules/: reponses.md
admin_app/: admin.py  forms.py  urls.py  views.py
chine/: admin.py  apps.py  forms.py  tasks.py  urls.py  views.py
config/: celery.py  urls.py
config/settings/: base.py  local.py  production.py
core/: admin.py  backends.py  context_processors.py  forms.py  middleware.py  mixins.py  models.py  models_tarif_snippet.py  urls.py  utils_pdf.py  views.py
core/migrations/: 0001_initial.py  0002_client_lot_colis_and_more.py  0003_remove_client_email.py  0004_lot_destination.py  0005_alter_lot_numero_alter_lot_type_transport.py  0006_lot_note.py  0007_colis_hauteur_colis_largeur_colis_longueur_and_more.py  0008_remove_tarif_surcharge_electronique_and_more.py  0009_lot_photo.py  0010_alter_colis_description.py  0011_backgroundtask.py  0014_client_user.py  (+21 more)
customers/: admin.py  apps.py  models.py  urls.py  views.py
docs/: architecture.md  clients_20260211_074536.csv  prd.md  product-brief-ts_air_cargo_v2-2026-02-06.md  ux-design-specification.md  validation-report-prd-2026-02-09.md
ivoire/: admin.py  apps.py  forms.py  urls.py  views.py
mali/: admin.py  apps.py  forms.py  urls.py  views.py
notification/: admin.py  models.py  tasks.py
report/: admin.py  forms.py  models.py  urls.py  views.py
templates/: 403.html  404.html  500.html  base.html  index.html
(+228 files in other folders)
