[tool.poetry]
package-mode = false

[project]
name = "ts-air-cargo-v2"
version = "0.1.0"
description = "Web application for managing parcel deliveries from China to Mali (Django Monolith)."
authors = [
    {name = "MaliandevBoy"}
]
requires-python = "^3.13"
dependencies = [
    "django (==5.2)",
    "psycopg[binary] (>=3.3.0,<4.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "gunicorn (>=25.0.0,<26.0.0)",
    "whitenoise (>=6.11.0,<7.0.0)",
    "django-tailwind[reload] (>=3.8.0,<4.0.0)",
    "django-htmx (>=1.22.0,<2.0.0)",
    "django-compressor (>=4.6,<5.0)",
    "channels[daphne] (>=4.3.0,<5.0.0)",
    "channels-redis (>=4.3.0,<5.0.0)",
    "celery[redis] (>=5.6.0,<6.0.0)",
    "django-celery-beat (>=2.8.0,<3.0.0)",
    "django-celery-results (>=2.6.0,<3.0.0)",
    "flower (>=2.0.0,<3.0.0)",
    "django-storages[s3] (>=1.14.0,<2.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "weasyprint (>=64.0,<65.0)",
    "xhtml2pdf (>=0.2.17,<0.3.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.0,<10.0.0)",
    "pytest-django (>=4.11.0,<5.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "factory-boy (>=3.3.0,<4.0.0)",
    "faker (>=40.0.0,<41.0.0)",
    "django-debug-toolbar (>=6.2.0,<7.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "black (>=26.1.0,<27.0.0)",
    "ruff (>=0.9.0,<0.10.0)",
    "pre-commit (>=4.5.0,<5.0.0)"
]
